# aerial_detection

./: CMakeLists.txt  README.md  package.xml
msg/: detections.msg
src/: classifier.cpp  classifier.h
